fixed menu alignment

--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,20 @@ nav a:hover {
   color: white !important;
   text-align: center !important;
 }
+
+#variety{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-left:18%;
+  margin-right: 16%;
+}
+.col-md-3 img{
+  max-width: 100%;
+  max-height: 100%;
+}
+.menu h2{
+  text-align: center;
+  padding-top:40px;
+  font-family: 'Gabriela', serif;
+}
